--- a/projects.json
+++ b/projects.json
@@ -57,7 +57,7 @@
         "skills": ["Lua", "Corona SDK", "git"],
         "github": "https://github.com/craftkiller/group_2",
         "source": "https://github.com/craftkiller/group_2/zipball/master",
-        "pictures": ["img/extraction/title.png"]
+        "pictures": ["img/extraction/title"]
     },
     {
         "title": "Finding Nema",
