small bug in the JSOn

--- a/projects.json
+++ b/projects.json
@@ -39,7 +39,7 @@
         "purpose": "Learn Google Dart and find a career",
         "skills": ["Google Dart", "JSON", "CSS"],
         "github": "https://github.com/craftkiller/paphuscom",
-        "source": "https://github.com/craftkiller/paphuscom/zipball/master",
+        "source": "https://github.com/craftkiller/paphuscom/zipball/master"
     },
     {
         "title": "Rezolution",
